# settleDyn

./: .gitignore  CMakeLists.txt  README  README.md  index.html  params.json  settle3D.cabal  settleDyn.cabal
cbits/: bullet.cpp  bullet.h  shape.cpp  shape.h  types.h
data/: cube_chamfered.off  ellipsoid.off  sphere.off
doc/: installation.txt  using_settle3D.txt  using_settleDyn.txt
src/: BulletFFI.hs  CLI.hs  Config.hs  Geometry.hs  Grains.hs  OffReader.hs  OffWriter.hs  Polyhedron.hs  PovWriter.hs  Random.hs  Simulation.hs  Transformation.hs  grains.h  main.cpp  sandbox.h  settle3D.hs  settleDyn.hs
