Name:                settleDyn
Version:             0.3.0.3

Synopsis:            Sedimentation process simulator for generation of loose
                     sand-like structures.
Description:         settleDyn is a sedimentation process simulator.  It is
                     capable of generating loose sand-like structures from given
                     particle forms and statistical distributions.
  
Homepage:            http://settleDyn.naumov.de
License:             GPL-3
License-file:        LICENSE
Author:              Dmitrij Yu. Naumov
Maintainer:          settleDyn@naumov.de
Copyright:           (C) 2009, 2010, 2011 Helmholtz Centre Potsdam, GFZ German Research Centre for Geosciences.
                     (C) 2011, 2012 Dmitrij Yu. Naumov

Category:            Scientific Simulation
Build-type:          Simple
Cabal-version:       >=1.4

Extra-source-files:  README, data/*.off, cbits/bullet.h, cbits/bullet.cpp,
                     cbits/types.h, cbits/shape.h, cbits/shape.cpp


Executable settleDyn
    HS-source-dirs:     src
    Main-is:            settleDyn.hs
  
    Build-depends:        array
                        , base >= 4 && < 5
                        , directory
                        , parsec >= 3 && < 4
                        , random
                        , split
                        , vector-space
  
    GHC-Options:        -Wall -funbox-strict-fields
    GHC-Prof-Options:   -Wall -auto-all -caf-all

    C-Sources:          cbits/bullet.cpp, cbits/shape.cpp
    Include-Dirs:       cbits, /usr/include/bullet
    Extra-Libraries:    BulletDynamics LinearMath BulletCollision stdc++

